--- a/css/style/style.css
+++ b/css/style/style.css
@@ -5,20 +5,22 @@
 }
 
 .navbar-brand {
-    font-size: 1.875em;
+    font-size: 2.875em;
 }
 
 .nav-link {
     font-family: 'Raleway', sans-serif;
     font-size: 1.875em;
-    color: black;
-
+    color: white;
+}
+.nav-item{
+    font-family: 'Raleway', sans-serif;
 }
 
-.logomenu {
-    height: 45px;
-    width: 45px;
-}
+/* .logomenu {
+    height: 3px;
+    width: 3px;
+} */
 
 .paquete {
     font-family: 'Raleway', sans-serif;
@@ -221,10 +223,10 @@ footer {
 
 /* somos */
 
-.logomenu {
-    height: 2.8125em;
-    width: 2.8125em;
-}
+/* .logomenu {
+    /* height: 2.8125em;
+    width: 2.8125em; *
+} */
 
 .somosletra {
     font-family: 'ubuntu', sans-serif;
