--- a/css/style/style.css
+++ b/css/style/style.css
@@ -1,21 +1,26 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .navbar {
-    background-color: orange;
-    /*text-emphasis-color: white; */
-    font-family: 'Releway', sans-serif;
+  background-color: orange;
+  /*text-emphasis-color: white; */
+  font-family: "Releway", sans-serif;
 }
 
 .navbar-brand {
-    font-size: 2.875em;
+  font-size: 2.875em;
 }
 
 .nav-link {
-    font-family: 'Raleway', sans-serif;
-    font-size: 1.875em;
-    color: white;
+  font-family: "Raleway", sans-serif;
+  font-size: 1.875em;
+  color: white;
 }
-.nav-item{
-    font-family: 'Raleway', sans-serif;
-    
+.nav-item {
+  font-family: "Raleway", sans-serif;
 }
 
 /* .logomenu {
@@ -24,202 +29,198 @@
 } */
 
 .paquete {
-    font-family: 'Raleway', sans-serif;
-    font-size: 1.875em;
-    padding-left: 12.5em;
-    height: 100%;
-    width: auto;
+  font-family: "Raleway", sans-serif;
+  font-size: 1.875em;
+  padding-left: 12.5em;
+  height: 100%;
+  width: auto;
 }
 
 .imagebg {
-    padding-left: 1.875em;
+  padding-left: 1.875em;
 }
 
-
 .img-fluid {
-    align-content: center;
+  align-content: center;
 }
 
 .titulopaquete {
-    font-family: 'Raleway', sans-serif;
-    text-align: center;
+  font-family: "Raleway", sans-serif;
+  text-align: center;
 
-    text-shadow: 0.125em 0.125em 0.1875em orange;
-
+  text-shadow: 0.125em 0.125em 0.1875em orange;
 }
 
 .titulopaquete1 {
-    font-family: 'Raleway', sans-serif;
-    text-align: center;
-    padding-top: 0.3125em;
+  font-family: "Raleway", sans-serif;
+  text-align: center;
+  padding-top: 0.3125em;
 }
 
 .herramientas {
-    font-family: 'Raleway', sans-serif;
-    text-align: center;
+  font-family: "Raleway", sans-serif;
+  text-align: center;
 }
 
 #tab-content {
-    background-color: orange;
-    padding-bottom: 0.5em;
-
+  background-color: orange;
+  padding-bottom: 0.5em;
 }
 
 .tab-0 {
-    font-family: 'Raleway', sans-serif;
-    font-size: 0.9375em;
-    margin-bottom: 0.5em;
-    margin-left: 0.6em;
-    padding-bottom: 0.5em;
-    padding-top: 0.6em;
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9375em;
+  margin-bottom: 0.5em;
+  margin-left: 0.6em;
+  padding-bottom: 0.5em;
+  padding-top: 0.6em;
 }
 
 .tab-1 {
-    font-family: 'Raleway', sans-serif;
-    font-size: 0.9375em;
-    margin-left: 0.6em;
-    padding-bottom: 1em;
-    padding-top: 0.6em;
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9375em;
+  margin-left: 0.6em;
+  padding-bottom: 1em;
+  padding-top: 0.6em;
 }
 
 .tab-2 {
-    font-family: 'Raleway', sans-serif;
-    font-size: 0.9375em;
-    margin-left: 0.6em;
-    padding-bottom: 0.5em;
-    margin-bottom: 0.5em;
-    padding-top: 0.6em;
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9375em;
+  margin-left: 0.6em;
+  padding-bottom: 0.5em;
+  margin-bottom: 0.5em;
+  padding-top: 0.6em;
 }
 
 .tab-3 {
-    font-family: 'Raleway', sans-serif;
-    font-size: 0.9375em;
-    margin-left: 0.6em;
-    padding-top: 0.5em;
-    margin-bottom: 0.5em;
-    padding-top: 0.6em;
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9375em;
+  margin-left: 0.6em;
+  padding-top: 0.5em;
+  margin-bottom: 0.5em;
+  padding-top: 0.6em;
 }
 
 .tab-4 {
-    font-family: 'Raleway', sans-serif;
-    font-size: 0.9375em;
-    margin-left: 0.6em;
-    margin-bottom: 0.5em;
-    padding-top: 0.6em;
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9375em;
+  margin-left: 0.6em;
+  margin-bottom: 0.5em;
+  padding-top: 0.6em;
 }
 
 .tab-5 {
-    font-family: 'Raleway', sans-serif;
-    font-size: 0.9375em;
-    margin-left: 0.6em;
-    padding-top: 0.5em;
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9375em;
+  margin-left: 0.6em;
+  padding-top: 0.5em;
 }
 
 #tab-content-1 {
-    background-color: darkblue;
-    padding-top: 0.6em
+  background-color: darkblue;
+  padding-top: 0.6em;
 }
 
 .tab-0a {
-    font-family: 'Raleway', sans-serif;
-    font-size: 0.9375em;
-    margin-bottom: 0.5em;
-
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9375em;
+  margin-bottom: 0.5em;
 }
 
 .tab-1a {
-
-    font-family: 'Raleway', sans-serif;
-    font-size: 0.9375em;
-    margin-bottom: 0.5em;
-
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9375em;
+  margin-bottom: 0.5em;
 }
 
 .tab-2a {
-
-    font-family: 'Raleway', sans-serif;
-    font-size: 0.9375em;
-    margin-bottom: 0.5em;
-    margin-left: 1em;
-
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9375em;
+  margin-bottom: 0.5em;
+  margin-left: 1em;
 }
 
 /* Tabla */
 .table1 {
-
-    background-color: paleturquoise;
-    text-align: center;
+  background-color: paleturquoise;
+  text-align: center;
 }
 
 #tableline1 {
-    border-width: 0.0625em;
-    border-right: solid;
-    border-color: white;
+  border-width: 0.0625em;
+  border-right: solid;
+  border-color: white;
 }
 
 #tableline2 {
-    border-width: 0.0625em;
-    border-right: solid;
-    border-color: white;
+  border-width: 0.0625em;
+  border-right: solid;
+  border-color: white;
 }
 
 #tableline3 {
-    border-width: 0.0625em;
-    border-right: solid;
-    border-color: white;
+  border-width: 0.0625em;
+  border-right: solid;
+  border-color: white;
 }
 
 #tableline4 {
-    border-width: 0.0625em;
-    border-right: solid;
-    border-color: white;
+  border-width: 0.0625em;
+  border-right: solid;
+  border-color: white;
 }
 
 #tableline5 {
-    border-width: 0.0625em;
-    border-right: solid;
-    border-color: white;
+  border-width: 0.0625em;
+  border-right: solid;
+  border-color: white;
 }
 
 #tableline6 {
-    border-width: 0.0625em;
-    border-right: solid;
-    border-color: white;
+  border-width: 0.0625em;
+  border-right: solid;
+  border-color: white;
 }
 
 /* footer*/
 
 footer {
-    margin-top: 0.9375em;
-    margin-bottom: 1.5625em;
+  padding-top: 0.9375em;
+  padding-bottom: 1.5em;
+  background-color: wheat;
 }
 
 #logo {
-    height: 3.2875em;
-    width: 3.2975em;
+  height: 3.2875em;
+  width: 3.2975em;
 }
 
 .legajo {
-    margin-top: 1.2875em;
+  margin-top: 1.2875em;
 }
 
 .ubicacion {
-    height: 2.1875em;
-    width: 2.1875em;
-    margin-top: 1.2875em;
+  height: 2.1875em;
+  width: 2.1875em;
+}
 
+.ubicacion-texto {
+  font-size: 0.8em;
+}
+
+.ubicacion-texto li {
+  list-style: none;
 }
 
 .phoneicon {
-    height: 2.1875em;
-    width: 2.1875em;
-    margin-top: 1.2875em;
+  height: 2.1875em;
+  width: 2.1875em;
 }
 
 .emailicon {
-    height: 2.1875em;
-    width: 2.1875em;
-    margin-top: 1.2875em;
+  height: 2.1875em;
+  width: 2.1875em;
 }
 
 /* somos */
@@ -230,154 +231,155 @@ footer {
 } */
 
 .somosletra {
-    font-family: 'ubuntu', sans-serif;
-    font-size: 1.125em;
+  font-family: "ubuntu", sans-serif;
+  font-size: 1.125em;
 }
 
 /* forma de pago */
 .parrafo1 {
-    font-family: 'ubuntu', sans-serif;
+  font-family: "ubuntu", sans-serif;
 }
 
 /* formulario de contacto*/
 .formulario {
-    background-color: aqua;
+  background-color: aqua;
 }
 
 .subformulario {
-    padding-left: 3.125em;
+  padding-left: 3.125em;
 }
 
 .contacto1 {
-    background-color: blue;
+  background-color: blue;
 }
 
 /*  Egreso de menores */
 .Menorinmigra {
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 1.125em;
+  font-family: "Ubuntu", sans-serif;
+  font-size: 1.125em;
 }
 
-
 .btn-primary {
-    background-color: orange !important;
-    border-color: orange !important;
+  background-color: orange !important;
+  border-color: orange !important;
 }
 
 .btn-primary:hover {
-    background-color: orangered !important;
-    border-color: orangered !important;
+  background-color: orangered !important;
+  border-color: orangered !important;
 }
 
 .btn-ver-mas {
-    position: relative;
-    top: -100px;
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 1.125em;
-    margin-right: 2em;
-
+  position: relative;
+  top: -100px;
+  font-family: "Ubuntu", sans-serif;
+  font-size: 1.125em;
+  margin-right: 2em;
 }
+
+.carta {
+  transition: 0.3s ease;
+}
+
+.carta:hover {
+  opacity: 1;
+  transform: scale(1.05, 1.05);
+}
+
 /* producto portada */
 
-.imagen1{
-    float: left;
+.imagen1,
+.imagen2,
+.imagen3 {
+  cursor: pointer;
+  transition: 0.3s ease;
 }
-.imagen2{
-   float: left;
-   padding-right: 15px;
+
+.imagen1:hover,
+.imagen2:hover,
+.imagen3:hover {
+  opacity: 1;
+  transform: scale(1.1, 1.1);
 }
-.imagen3{
-    align-items: left;
+
+.incluye li {
+  font-size: 1.1em;
+  padding-bottom: 1em;
 }
-.descripcion{
-    float: inline-start;
-    margin-top: 10px;
+
+.descripcion {
+  float: inline-start;
+  margin-top: 10px;
 }
-.descripcion .row{
-    background-color: bisque;
-    border-width: 5px;
+.descripcion .row {
+  /*background-color: bisque;*/
+  border-width: 5px;
 }
 
 /* footer */
 
-/* footer*/
-
-footer {
-    margin-top: 0.9375em;
-    margin-bottom: 1.5625em;
-    background-color: wheat;
-}
-
 #logo {
-    height: 3.2875em;
-    width: 3.2975em;
-    margin-top: 1.2875em;
+  height: 3.2875em;
+  width: 3.2975em;
 }
 
 .legajo {
-    margin-top: 1.2875em;
-
+  margin-top: 1.2875em;
 }
 
 .ubicacion {
-    height: 2.1875em;
-    width: 2.1875em;
-    margin-top: 1.2875em;
-
-
+  height: 2.1875em;
+  width: 2.1875em;
 }
 
 .phoneicon {
-    height: 2.1875em;
-    width: 2.1875em;
-    margin-top: 2.875em;
+  height: 2.1875em;
+  width: 2.1875em;
 }
 
 .emailicon {
-    height: 2.1875em;
-    width: 2.1875em;
-    margin-top: 2.8875em;
+  height: 2.1875em;
+  width: 2.1875em;
 }
-.button .btn-danger{
-    padding-right: 10px;
+.button .btn-danger {
+  padding-right: 10px;
 }
 
 /* comienza el codigo cs para las estrellas */
 #form1 {
-    width: 250px;
-    margin: 0 auto;
-    height: 50px;
-  }
-  
-  #form1 p {
-    text-align: center;
-  }
-  
-  #form1 label {
-    font-size: 20px;
-  }
-  
-  input[type="radio"] {
-    display: none;
-  }
-  
-  label {
-    color: grey;
-  }
-  
-  .clasificacion {
-    direction: rtl;
-    unicode-bidi: bidi-override;
-  }
-  
-  label:hover,
-  label:hover ~ label {
-    color: orange;
-  }
-  
-  input[type="radio"]:checked ~ label {
-    color: orange;
-  }
+  width: 250px;
+  margin: 0 auto;
+  height: 50px;
+}
 
+#form1 p {
+  text-align: center;
+}
+
+#form1 label {
+  font-size: 20px;
+}
+
+input[type="radio"] {
+  display: none;
+}
+
+label {
+  color: grey;
+}
+
+.clasificacion {
+  direction: rtl;
+  unicode-bidi: bidi-override;
+}
+
+label:hover,
+label:hover ~ label {
+  color: orange;
+}
+
+input[type="radio"]:checked ~ label {
+  color: orange;
+}
 
 /*  */
