--- a/alberto-bossio/css/style/style.css
+++ b/alberto-bossio/css/style/style.css
@@ -277,6 +277,21 @@ footer {
 
 }
 
+/* ----- Comienza el codigo cs para las estrellas ----- */
+
+  input[type="radio"] {
+    display: none;
+  }
+  
+  .clasificacion {
+    direction: rtl;
+    unicode-bidi: bidi-override;
+  }
+  
+  input[type="radio"]:checked ~ label {
+    color: orange;
+  }
+
 /* alberto */
 body{ 
     background-image: url(https://cdn.lavoz.com.ar/sites/default/files/styles/width_1072/public/nota_periodistica/737-max-8_1552315835.jpg);
