--- a/css/style/style.css
+++ b/css/style/style.css
@@ -76,7 +76,7 @@ body {
 }
 
 .carousel-imagen2 {
-  background-image: url("../../images/carousel-img2.jpeg");
+  background-image: url("../../images/carousel-img2.jpg");
 }
 
 .carousel-imagen3 {
