--- a/alberto-bossio/css/style/style.css
+++ b/alberto-bossio/css/style/style.css
@@ -53,25 +53,22 @@
 
 /* ----- Comienza el codigo cs para las estrellas ----- */
 
-  input[type="radio"] {
-    display: none;
-  }
+input[type="radio"] {
+  display: none;
+}
   
-  .clasificacion {
-    direction: rtl;
-    unicode-bidi: bidi-override;
-  }
+.clasificacion {
+  direction: rtl;
+  unicode-bidi: bidi-override;
+}
   
-  label:hover,
-label:hover ~ label {
-  color: white;
+input[type="radio"]:checked ~ label {
+  color: orange;
 }
 
-input[type="radio"]:checked ~ label {
-  color: orangered;
-}
 
 /* fondo */
+
 body{ 
     background-image: url(https://cdn.lavoz.com.ar/sites/default/files/styles/width_1072/public/nota_periodistica/737-max-8_1552315835.jpg);
     background-attachment: fixed;
