--- a/rodri-toyama/css/style.css
+++ b/rodri-toyama/css/style.css
@@ -4,9 +4,14 @@
   box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   font-family: "Raleway", sans-serif !important;
   background-color: #f6f6f6 !important;
+  min-height: 100%;
 }
 
 li {
