encabezado fix active, fix footer hrefs, fix linkinteres hrefs + col/row, agregado opiniones.php + estilos, cambiado array / x

--- a/css/style/style.css
+++ b/css/style/style.css
@@ -344,6 +344,23 @@ input[type="radio"]:checked ~ label {
   color: orange;
 }
 
+/* ----- iframe Google maps -----*/
+
+.google-maps {
+  position: relative;
+  padding-bottom: 25%;
+  height: 0;
+  overflow: hidden;
+}
+
+.google-maps iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 100% !important;
+}
+
 
 /*
 col <576pxs
