--- a/rodri-toyama/css/style.css
+++ b/rodri-toyama/css/style.css
@@ -4,24 +4,15 @@
   box-sizing: border-box;
 }
 
-html {
-  height: 100%;
-}
-
 body {
   font-family: "Raleway", sans-serif !important;
   background-color: #f6f6f6 !important;
-  min-height: 100%;
-}
-
-li {
-  list-style: none;
 }
 
 /* ----- Encabezado ----- */
 
 .navbar {
-  background-color: #F78014;
+  background-color: #f78014;
 }
 
 .navbar-brand {
@@ -51,12 +42,12 @@ li {
 }
 
 .titulo-carousel {
-  font-family: 'Nothing You Could Do', cursive;
+  font-family: "Nothing You Could Do", cursive;
   font-size: 8.5rem;
 }
 
 .subtitulo-carousel {
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   font-size: 1.2rem;
   font-weight: bold;
 }
@@ -111,7 +102,7 @@ li {
   display: inline-block;
   transition: 0.5s;
   margin: 10px 10px;
-  background-color: #F78014 !important;
+  background-color: #f78014 !important;
 }
 
 .btn-slide:hover {
@@ -120,13 +111,11 @@ li {
   color: white;
 }
 
-
 /* ----- Destinos Populares ----- */
 
 .destinos-populares h2 {
   font-size: 2.5rem !important;
 }
-
 
 /* ----- Newsletter area ----- */
 
@@ -137,28 +126,28 @@ li {
 }
 
 .newsletter-input {
-  padding: .5rem .75rem !important;
+  padding: 0.5rem 0.75rem !important;
   width: 100%;
 }
 
 .newsletter-btn {
-  background-color: #F78014 !important;
+  background-color: #f78014 !important;
 }
 
 /* ----- Links de Interes ----- */
 
+.herramientas {
+  font-family: "Raleway", sans-serif;
+  text-align: center;
+}
 
 #tab-content {
-  background-color: #F78014;
+  background-color: #f78014;
   padding-bottom: 0.5em;
 }
 
-.tab-0,
-.tab-1,
-.tab-2,
-.tab-3,
-.tab-4,
-.tab-5 {
+.tab-0 {
+  font-family: "Raleway", sans-serif;
   font-size: 0.9375em;
   padding-bottom: 0.6em;
   padding-top: 0.6em;
@@ -169,9 +158,8 @@ li {
   padding-top: 0.6em;
 }
 
-.tab-0a,
-.tab-1a,
-.tab-2a {
+.tab-0a {
+  font-family: "Raleway", sans-serif;
   font-size: 0.9375em;
   margin-bottom: 0.5em;
 }
@@ -181,7 +169,7 @@ li {
 footer {
   padding-top: 0.9375em;
   padding-bottom: 1.5em;
-  background-color: rgb(5,5,5);
+  background-color: rgb(5, 5, 5);
 }
 
 #logo {
@@ -189,23 +177,28 @@ footer {
   width: 3.2975em;
 }
 
-.ubicacion {
-  height: 2.1875em;
-  width: 2.1875em;
+.legajo {
+  margin-top: 1.2875em;
 }
 
 .ubicacion-texto {
   font-size: 0.8em;
 }
 
-.phoneicon {
+.ubicacion-texto li {
+  list-style: none;
+}
+
+.ubicacion,
+.phoneicon,
+.emailicon {
   height: 2.1875em;
   width: 2.1875em;
 }
 
-.emailicon {
-  height: 2.1875em;
-  width: 2.1875em;
+.somosletra {
+  font-family: "ubuntu", sans-serif;
+  font-size: 1.125em;
 }
 
 .button .btn-danger {
@@ -334,6 +327,22 @@ input[type="radio"]:checked ~ label {
   color: orange;
 }
 
+/* ----- iframe Google maps -----*/
+
+.google-maps {
+  position: relative;
+  padding-bottom: 25%;
+  height: 0;
+  overflow: hidden;
+}
+
+.google-maps iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 100% !important;
+}
 
 /*
 col <576pxs
@@ -346,14 +355,13 @@ col-xl ≥1200px
 /* ----- Media query ----- */
 
 @media only screen and (max-width: 576px) {
-
   .titulo-carousel {
-    font-family: 'Nothing You Could Do', cursive;
+    font-family: "Nothing You Could Do", cursive;
     font-size: 2.5rem;
   }
-  
+
   .subtitulo-carousel {
-    font-family: 'Rubik', sans-serif;
+    font-family: "Rubik", sans-serif;
     font-size: 1rem;
     font-weight: bold;
   }
@@ -382,64 +390,56 @@ col-xl ≥1200px
     transform: translateY(-50%);
     bottom: initial;
   }
-
 }
 
 @media only screen and (min-width: 576px) {
-  
   .titulo-carousel {
-    font-family: 'Nothing You Could Do', cursive;
+    font-family: "Nothing You Could Do", cursive;
     font-size: 4.5rem;
   }
-  
+
   .subtitulo-carousel {
-    font-family: 'Rubik', sans-serif;
+    font-family: "Rubik", sans-serif;
     font-size: 1.2rem;
     font-weight: bold;
   }
 }
 
 @media only screen and (min-width: 768px) {
-  
   .titulo-carousel {
-    font-family: 'Nothing You Could Do', cursive;
+    font-family: "Nothing You Could Do", cursive;
     font-size: 5rem;
   }
-  
+
   .subtitulo-carousel {
-    font-family: 'Rubik', sans-serif;
+    font-family: "Rubik", sans-serif;
     font-size: 1.2rem;
     font-weight: bold;
   }
 }
 
 @media only screen and (min-width: 992px) {
-
   .titulo-carousel {
-    font-family: 'Nothing You Could Do', cursive;
+    font-family: "Nothing You Could Do", cursive;
     font-size: 7.5rem;
   }
-  
+
   .subtitulo-carousel {
-    font-family: 'Rubik', sans-serif;
+    font-family: "Rubik", sans-serif;
     font-size: 1.2rem;
     font-weight: bold;
   }
-
 }
 
-
 @media only screen and (min-width: 1200px) {
-
   .titulo-carousel {
-    font-family: 'Nothing You Could Do', cursive;
+    font-family: "Nothing You Could Do", cursive;
     font-size: 9rem;
   }
-  
+
   .subtitulo-carousel {
-    font-family: 'Rubik', sans-serif;
+    font-family: "Rubik", sans-serif;
     font-size: 1.2rem;
     font-weight: bold;
   }
-
 }
