agregado algunos estilos a ul de products_details.php(antiguamente opiniones.php), removido .json viejo, agregado mas datos a funcionesproductoportada.php (array)

--- a/rodri-toyama/css/style.css
+++ b/rodri-toyama/css/style.css
@@ -303,6 +303,13 @@ footer {
   border-width: 5px;
 }
 
+/* ----- Detalles de Producto ----- */
+
+.descripcion_detalles {
+  margin-left: 2em;
+}
+
+
 /* ----- Comienza el codigo cs para las estrellas ----- */
 
 #form1 {
